--- a/src/App.css
+++ b/src/App.css
@@ -24,14 +24,13 @@ h1{
   text-align: center;
   display: flex;
   align-items: center;
-  justify-content: center;
-  height: 250px;
-  width: 600px;
+  height: 350px;
+  width: 40%;
   margin: 20px;
   padding: 20px;
   font-size: 1.8rem;
   font-family: 'Times New Roman', Times, serif;
-  outline: none;
+  outline: n  one;
   border-radius: 20px;
   box-shadow: 2px 5px 5px 2px  black;
 
@@ -73,20 +72,18 @@ h1{
   justify-content: center;
 }
 .text{
-  text-align: center;
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 200px;
-  width: 350px;
-  margin: 20px;
+  height: 300px;
+  width: 300px;
+  margin: 10px;
   padding: 20px;
-  font-size: 1.8rem;
+  font-size: 2rem;
   font-family: 'Times New Roman', Times, serif;
   outline: none;
   border-radius: 20px;
   box-shadow: 2px 5px 5px 2px  black;
-
 }
 .btn{
   margin-top: 40px;
